Wed Jan  4 08:09:20 2006  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Fixed a bug where adding a grouped set of source files that are
          generated using a wildcard would cause a duplicate of the default
          group if files were added to a different after the generated
          group.

Tue Jan  3 08:26:34 2006  Chad Elliott  <elliott_c@ociweb.com>

        * USAGE:
        * modules/Options.pm:

          Added the possible language settings to the help message.

        * templates/make.mpd:
        * templates/makedll.mpt:

          Allow control of the 'genflags' setting with the 'optimize'
          template variable.  This changes the default 'genflags' setting
          from -g to -O.

        * templates/vc7.mpd:
        * templates/vc7dll.mpt:
        * templates/vc7exe.mpt:
        * templates/vc7lib.mpt:
        * templates/vc7libexe.mpt:
        * templates/vc8.mpd:
        * templates/vc8dll.mpt:
        * templates/vc8exe.mpt:
        * templates/vc8lib.mpt:
        * templates/vc8libexe.mpt:

          Introduced a new template variable, 'debug_prj', which helps
          control which run-time library is used during linking.
          Previously, this was controled by the 'optimize' template
          variable, but building a "Release" configuration with 'optimize'
          turned off did not work where inline functions were used in other
          libraries (being linked in) where 'optimize' was left on.

Mon Dec 26 21:02:36 2005  Chad Elliott  <elliott_c@ociweb.com>

        * templates/vc7.mpd:
        * templates/vc8.mpd:

          Set the run-time library to a static version if either template
          variables type_is_static or need_staticflags are set.

Thu Dec 22 13:56:14 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * modules/AutomakeProjectCreator.pm:

          Disable code that prefixed include paths with "$(srcdir)/".  In